# DataBase

./: CMakeLists.txt  Readme.md  main.cpp  test.cpp
DataBase/: Buffer.h  Collector.h  Data.txt  DataBase.h  Definition.h  Deleter.h  Editor.h  Eraser.h  Global.h  Opener.h  Reader.h  UniBase.h  Writer.h  Writer[TName, TCode, TCost].h  main.cpp
